fix dashboard tab off-center issue

--- a/geothermalsite/static/css/documentation.css
+++ b/geothermalsite/static/css/documentation.css
@@ -1,5 +1,10 @@
 @import "generalSiteStyles.css";
 
+#content-block {
+    margin-left: 5%;
+    margin-right: 12% !important;
+}
+
 .list-group-item.active {
     background-color: var(--custom-green);
     border-color: var(--custom-green);
