--- a/geothermalsite/static/css/generalSiteStyles.css
+++ b/geothermalsite/static/css/generalSiteStyles.css
@@ -72,7 +72,7 @@ label {
 /* Override-able blocks defined in base.html ------------------------------- */
 #content-block {
     margin-left: 5%;
-    margin-right: 10%;
+    margin-right: 5%;
 }
 
 #page-header {
